# Sundai-7-12-26

./: .gitignore  CLAUDE.md  README.md  action.yml  agent_debugger_prd.md  pyproject.toml
.github/workflows/: ci.yml
configs/agents/: careful-reference.yaml  hasty-reference.yaml  openrouter-claude.yaml  openrouter-gpt.yaml  openrouter-grok.yaml  scripted-known-good.yaml
containers/server/: Dockerfile
containers/validator/: Dockerfile
docs/: 01-executive-summary.md  02-background-motivation.md  03-product-vision.md  04-goals.md  05-non-goals.md  06-personas.md  07-jobs-to-be-done.md  08-core-principles.md  09-system-overview.md  10-product-surfaces.md  11-workflows-pipelines.md  12-user-experience.md  13-functional-requirements.md  14-non-functional-requirements.md  15-data-artifact-model.md  16-configuration-model.md  17-runtime-dependency-strategy.md  18-distribution-installation.md  19-integration-architecture.md  20-security-architecture.md  21-testing-validation.md  22-observability-reporting.md  23-state-memory-traceability.md  24-extensibility-model.md  25-technical-architecture.md  26-architectural-decisions.md  27-risks-mitigations.md  28-phased-implementation-plan.md  29-agent-oriented-build-plan.md  30-definition-of-done.md  31-success-metrics.md  32-open-questions.md  33-future-opportunities.md  34-next-actions.md  implementation-notes.md  requirements-matrix.yaml
docs/protocols/: action-protocol-0.1.0.json
scenarios/_guides/: blogcms.config-path.yaml  (+4 more)
tests/: conftest.py
web/: package-lock.json  package.json  tsconfig.json
web/src/: app.ts
(+104 files in other folders)
